docs: backend - atualizando parametros de paginação em pacientes e médicos na documentação swagger
